# picopad-template

./: CMakeLists.txt  README.md  config.h  include.h  picopad-flags.cmake  toolchain-arm-none-eabi.cmake
img/: battery.cpp  menu.cpp  menu2.cpp
picopad-sdk/sdk/: Makefile.inc  README.MD  Readme.txt  config_def.h  global.h  includes.h
picopad-sdk/sdk/!LOADER/LOADER/: LOADER.TXT  config.h
picopad-sdk/sdk/!LOADER/LOADER/src/: main.h
picopad-sdk/sdk/_boot2/: Makefile
picopad-sdk/sdk/_devices/picoino/: _config.h
picopad-sdk/sdk/_devices/picoino_loader/: _config.h
picopad-sdk/sdk/_devices/picopad/: _config.h  _include.h  _makefile.inc  picopad_bat.h  picopad_init.h  picopad_key.h  picopad_led.h  picopad_spk.h  picopad_ss.h
picopad-sdk/sdk/_display/st7789/: st7789.h
picopad-sdk/sdk/_display/vga/: vga.h  vga_blitkey.S  vga_config.h  vga_layer.h  vga_pal.h  vga_render.S  vga_screen.h  vga_util.h  vga_vmode.h
picopad-sdk/sdk/_display/vga/render/: vga_atext.S  vga_attrib8.S  vga_color.S  vga_ctext.S  vga_dtext.S  vga_fastsprite.S  vga_ftext.S  vga_graph1.S  vga_graph2.S  vga_graph4.S  vga_graph8.S  vga_graph8mat.S  vga_graph8persp.S  vga_gtext.S  vga_level.S  vga_levelgrad.S  vga_mtext.S  vga_oscil.S  vga_oscline.S  vga_persp.S  vga_persp2.S  vga_plane2.S  vga_progress.S  vga_sprite.S  vga_tile.S  vga_tile2.S  vga_tilepersp.S  vga_tilepersp15.S  vga_tilepersp2.S  vga_tilepersp3.S  vga_tilepersp4.S
picopad-sdk/sdk/_lib/: _include.h  _makefile.inc
picopad-sdk/sdk/_lib/bigint/: bernoulli.c  bigint.c  bigint.h
picopad-sdk/sdk/_lib/bigint/bernoulli/: !info.txt  bernoulli.csv  include.h  main.c  main.h
picopad-sdk/sdk/_lib/inc/: lib_alarm.h  lib_calendar.h  lib_calendar64.h  lib_canvas.h  lib_color.h  lib_crc.h  lib_decnum.h  lib_drawtft.h  lib_list.h  lib_mat2d.h  lib_mem.h  lib_print.h  lib_pwmsnd.h  lib_qdraw.h  lib_rand.h  lib_rect.h  lib_ring.h  lib_ringrx.h  lib_ringtx.h  lib_sd.h  lib_stream.h  lib_text.h  lib_textlist.h  lib_tprint.h  lib_tree.h
picopad-sdk/sdk/_lib/real/: real.c  real.h  real_c.h  real_def.h  real_fromtext.h  real_h.h  real_totext.h  real_undef.h
picopad-sdk/sdk/_lib/real/genconst/: !info.txt  config.h  genconst.c  genconst.h  genconst.vcproj  global.h  include.h  main.c  main.h  rand.c  rand.h
picopad-sdk/sdk/_lib/src/: lib_alarm.c  lib_calendar.c  lib_calendar64.c  lib_color.c  lib_crc.c  lib_fat.c  lib_list.c  lib_mat2d.c  lib_mem.c  lib_print.c  lib_pwmsnd.c  lib_rand.c  lib_rect.c  lib_ring.c  lib_ringrx.c  lib_ringtx.c  lib_sd.c  lib_stream.c  lib_text.c  lib_textlist.c  lib_textnum.c  lib_tree.c  vga_blitkey.S
picopad-sdk/sdk/_sdk/: _include.h  _makefile.inc  asm_include.inc  crt0.S
src/: main.cpp
tools/: elf2uf2_macos  loader_crc_macos
